--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         "laravel/framework": "5.1.*",
         "laracasts/flash": "~1.3",
         "illuminate/html" : "~5.0",
-        "barryvdh/laravel-debugbar": "~2.0"
+        "dev4living/lean-cloud-sms-php": "dev-master"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "~2.0",
         "fzaninotto/faker": "~1.5",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
