--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "laracasts/flash": "~1.3",
         "illuminate/html" : "~5.0",
-        "dev4living/lean-cloud-sms-php": "dev-master"
+        "dev4living/lean-cloud-sms-php": "dev-master",
+        "guzzlehttp/guzzle": "~5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~2.0",
